# calendalarm

./: .gitignore  README.md  get48h.py  mypy.ini  notifier.sh  pyproject.toml
