[project]
name = "calendar"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jun Furuse", email = "jun.furuse@dailambda.jp" }
]
dependencies = [
    "google-api-python-client>=2.149.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "mypy>=1.13.0",
    "icecream>=2.1.3",
    "typeguard>=4.4.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/calendar"]
